--- a/cripto-react/src/components/Assistent.module.css
+++ b/cripto-react/src/components/Assistent.module.css
@@ -197,7 +197,7 @@
 .welcomeMessage {
   text-align: center;
   padding: 12px;
-  background: rgba(124, 58, 237, 0.607);
+  background: var( --primary-dark);
   border-radius: 12px;
   color: var(--primary-dark);
   font-size: 14px;
@@ -223,10 +223,11 @@
 
 .botIcon {
   color: var(--primmary-lighter);
+  margin-right: 8px;
 }
 
 .messageContent {
-  padding: 12px 16px;
+  padding: 20px 40px;
   border-radius: 18px;
   line-height: 1.6;
   word-wrap: break-word;
