--- a/cripto-react/src/components/Assistent.module.css
+++ b/cripto-react/src/components/Assistent.module.css
@@ -278,6 +278,33 @@
   color: var(--text-light);
 }
 
+/*Mensgem para criação de tabelas*/
+.markdownTableWrapper{
+  overflow-x: auto;
+  max-width: 100%;
+}
+
+.markdown table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+.markdown th,
+.markdown td {
+  min-height: 100%;
+  border: 1px solid #444;
+  padding: 8px;
+  text-align: left;
+  white-space: nowrap; /* impede quebra */
+}
+
+.markdown th {
+  background-color: #333;
+  color: white;
+}
+
+
 .typingIndicator {
   display: flex;
   align-items: center;
