--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -243,6 +243,79 @@ body {
   box-shadow: 0 10px 20px #ff00ff55;
 }
 
+/*Comunidade*/
+
+.comunidadeSection {
+  margin-top: 10rem;
+  padding: 100px 20px;
+  background: rgba(255, 255, 255, 0);
+  border-top: 1px solid #3f025088;
+  backdrop-filter: blur(6px);
+  color: #fff;
+  text-align: center;
+  animation: fadeInUp 1.2s ease forwards;
+  opacity: 0;
+}
+
+.comunidadeContent {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.comunidadeSection h2 {
+  font-size: 60px;
+  font-weight: 600;
+  color: #e4dfdfeb ;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+}
+
+.comunidadeSection p {
+  font-size: 24px;
+  color: #cfcfcf;
+  margin-bottom: 40px;
+  line-height: 1.6;
+}
+
+.comunidadeButton {
+  background: linear-gradient(145deg, #4a0a72, #45105a);
+  color: #000;
+  border: none;
+  padding: 16px 40px;
+  font-size: 18px;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: bold;
+  border-radius: 40px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 0 20px #00ffcc50;
+  height: 50px;
+}
+
+.comunidadeButton:hover {
+  transform: scale(1.05);
+  background: linear-gradient(145deg, #00e6b8, #66ffcc);
+  box-shadow: 0 0 30px #00ffc040;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .comunidadeSection h2 {
+    font-size: 38px;
+  }
+
+  .comunidadeSection p {
+    font-size: 18px;
+  }
+
+  .comunidadeButton {
+    padding: 14px 28px;
+    font-size: 16px;
+  }
+}
+
+
 /* Responsividade */
 @media (max-width: 1080px) {
   .content h1 {
