--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -273,20 +273,7 @@ body {
   line-height: 1.6;
 }
 
-.comunidadeButton {
-  background: linear-gradient(145deg, #4a0a72, #ff00ff55);
-  color: #e4dede;
-  border: none;
-  padding: 2px 40px;
-  font-size: 18px;
-  font-family: 'Orbitron', sans-serif;
-  font-weight: bold;
-  border-radius: 40px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 0 30px #59397b;
-  height: 50px;
-}
+
 
 .comunidadeButton:hover {
   transform: scale(1.05);
@@ -397,4 +384,55 @@ body {
   opacity: 0.8;
   pointer-events: none;
   animation: moveLights 10s linear infinite;
+}
+
+.comunidadeRight {
+  display: flex;
+  align-items: center; 
+  gap: 20px; 
+  margin-top: 10%;
+}
+
+.comunidadeRight p {
+  width: 60%;
+  margin-top: 100px;
+  font-size: 20px;
+  color: #cfcfcf;
+  text-align: left;
+}
+
+.comunidadeButton {
+  background: linear-gradient(145deg, #4a0a72, #ff00ff55);
+  color: #e4dede;
+  border: none;
+  padding: 2px 40px;
+  font-size: 18px;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: bold;
+  border-radius: 40px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  height: 50px;
+  white-space: nowrap;
+  margin-left: auto;
+  width: 30%;
+}
+
+.comunidadeButton:hover {
+  transform: scale(1.05);
+  background: linear-gradient(145deg, #430c4e, #ff00ff55);
+  box-shadow: 0 0 30px #59397b33;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .comunidadeRight {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .comunidadeButton {
+    align-self: center;
+    margin-top: 15px;
+  }
 }
