Fase inicial da Home

--- a/cripto-react/src/components/CookieBanner.css
+++ b/cripto-react/src/components/CookieBanner.css
@@ -31,4 +31,9 @@
   font-weight: bold;
   height: 35px;
   margin-top: 25px;
+  background-color: linear-gradient(135deg,  #732d91, #8e44ad);
 }
+
+
+ 
+
