--- a/cripto-react/src/components/Navbar.module.css
+++ b/cripto-react/src/components/Navbar.module.css
@@ -49,7 +49,7 @@
 
 /* Botão Cadastre-se */
 .cadastroButton {
-  background: linear-gradient(135deg, #3f025b, #b12092);
+    background: linear-gradient(135deg, #732d91, #8e44ad);
   color: #fff;
   height: 48px;
   font-size: 18px;
