--- a/cripto-react/src/pages/LessonPage.module.css
+++ b/cripto-react/src/pages/LessonPage.module.css
@@ -15,7 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .backArrow {
@@ -28,13 +28,15 @@
 }
 
 .title a {
-  font-size: 2.5rem;
+  font-size: 2.5;
+  color: #fff;
   font-weight: bold;
-  color: #ece6e6eb;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .highlight {
-  font-size: 2.5rem;
+  font-size: 2.5;
   color: #861888;
 }
 
@@ -67,11 +69,12 @@
 }
 
 .videoContainer video {
-  width: 860px; /* ou 80%, depende do que você quer */
+  width: 860px;
+  /* ou 80%, depende do que você quer */
   max-width: 100%;
   height: auto;
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
 
 .pdfContainer {
@@ -134,4 +137,3 @@
 .comunidadeLink a {
   color: #861888c1;
 }
-
