--- a/cripto-react/src/pages/SimulatorPage.module.css
+++ b/cripto-react/src/pages/SimulatorPage.module.css
@@ -12,6 +12,7 @@
   text-align: center;
   margin-bottom: 30px;
   width: 100%;
+  margin-top: 2%;
 }
 
 .backArrow {
@@ -24,7 +25,7 @@
 }
 
 .title {
-  font-size: 60px;
+  font-size: 35px;
   color: #fff;
   font-weight: bold;
   text-transform: uppercase;
@@ -65,7 +66,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-height: 650px;
+  max-height: 700px;
   gap: 15px;
   border: 4px solid transparent;
   border-radius: 30px;
