mudando quiz concluir

--- a/cripto-react/src/pages/QuizPage.module.css
+++ b/cripto-react/src/pages/QuizPage.module.css
@@ -85,8 +85,8 @@
 }
 
 .optionLabel:hover {
-  border-color: #7a00ffcc;
-  background-color: #32005a88;
+  border-color: #8e44ad;
+  background-color: #411255;
 }
 
 .radio {
