Estilizando mensagens de erro

--- a/cripto-react/src/pages/ForgotPassword.css
+++ b/cripto-react/src/pages/ForgotPassword.css
@@ -122,6 +122,15 @@ label {
 }
 
 .message.error {
-  background-color: #ffeef0;
-  color: #cb2431;
+  border-radius: 8px;
+  font-size: 18px;
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #ffeef0 !important;
+  color: #cb2431 !important;
+  font-weight: 200;
+  height: 36px;
+  padding: 8px;
+
 }
