--- a/cripto-react/src/pages/ResetPassword.css
+++ b/cripto-react/src/pages/ResetPassword.css
@@ -1,9 +1,7 @@
 .reset-password-box {
   max-width: 450px;
   width: 100%;
-
   border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .reset-password-container {
@@ -11,7 +9,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  padding: 20px; /* Para evitar que encoste nas bordas em telas pequenas */
+  padding: 20px; 
 }
 
 .reset-password-header {
@@ -19,16 +17,27 @@
   margin-bottom: 30px;
 }
 
-.reset-password-header h1 {
-  font-size: 24px;
-  color: #fff;
-  margin-bottom: 10px;
+.reset-password-box {
+  align-items: center;
+  text-align: center;
 }
 
-.reset-password-header p {
-  font-size: 14px;
+.reset-password-box h1 {
+  font-size: 34px;
   color: #fff;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 100%;
 }
+
+.reset-password-box p {
+  align-items: center;
+  margin-bottom: 30px;
+  font-size: 20px;
+  color: #ffffff;
+  margin-left: 1.5%;
+}
+
 
 .reset-password-form {
   margin-top: 20px;
@@ -104,14 +113,21 @@
   border-radius: 4px;
   margin-bottom: 20px;
   font-size: 14px;
+    margin: 20px auto; /* 'auto' centraliza horizontalmente */
 }
-
+/*
 .message.success {
-  background-color: #e6ffed;
+  background-color: #e6ffed !important;
   color: #22863a;
+}*/
+
+.error-message  {
+  border-radius: 8px;
+  background-color: #ffeef0 !important;
+  color: #cb2431 !important;
+  font-weight: 200;
+  height: 36px;
+  padding: 5px;
+
 }
 
-.message.error {
-  background-color: #ffeef0;
-  color: #cb2431;
-}
