--- a/cripto-react/src/pages/ForgotPassword.css
+++ b/cripto-react/src/pages/ForgotPassword.css
@@ -15,6 +15,19 @@
   padding: 20px;
 }
 
+.voltarHome {
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1000;
+}
+
+.voltarHome img {
+    width: 110px;
+    height: 70px;
+}
+
 .forgot-password-box {
   max-width: 700px;
   width: 100%;
