--- a/cripto-react/src/pages/ResetPassword.css
+++ b/cripto-react/src/pages/ResetPassword.css
@@ -9,7 +9,20 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  padding: 20px; 
+  padding: 20px;
+}
+
+.voltarHome {
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+}
+
+.voltarHome img {
+  width: 110px;
+  height: 70px;
 }
 
 .reset-password-header {
@@ -43,7 +56,7 @@
   margin-top: 20px;
 }
 
-/* Reutiliza os estilos do ForgotPassword.css para consistência */
+
 .form-group {
   margin-bottom: 20px;
 }
@@ -72,7 +85,7 @@
 
 .submit-button {
   width: 100%;
-  padding: 12px;
+  padding: 18px;
   background: linear-gradient(90deg, #732d91, #8e44ad);
   color: white;
   border: none;
@@ -113,15 +126,17 @@
   border-radius: 4px;
   margin-bottom: 20px;
   font-size: 14px;
-    margin: 20px auto; /* 'auto' centraliza horizontalmente */
+  margin: 20px auto;
+  /* 'auto' centraliza horizontalmente */
 }
+
 /*
 .message.success {
   background-color: #e6ffed !important;
   color: #22863a;
 }*/
 
-.error-message  {
+.error-message {
   border-radius: 8px;
   background-color: #ffeef0 !important;
   color: #cb2431 !important;
@@ -130,4 +145,3 @@
   padding: 5px;
 
 }
-
