--- a/cripto-react/src/pages/SimulatorPage.module.css
+++ b/cripto-react/src/pages/SimulatorPage.module.css
@@ -114,7 +114,6 @@
   padding: 12px;
   height: 50px;
   color: #fff;
-  background: linear-gradient(to right, #3f025bc8, #b12092);
   border: none;
   border-radius: 50px;
   font-size: 1.2em;
@@ -123,9 +122,7 @@
   transition: background-color 0.3s ease;
 }
 
-.simulatorForm button:hover {
-  background: linear-gradient(to right, #3f025b27, #b1209228);
-}
+
 
 .simulationResult {
   margin-top: 20px;
@@ -224,4 +221,15 @@
 .tooltip:hover .tooltipText {
   visibility: visible;
   opacity: 1;
+}
+
+.investmentExplanation {
+  margin-top: 20px;
+  font-size: 0.95rem;
+  color: #ddd;
+  background-color: #8581810e;
+  padding: 16px;
+  border-radius: 8px;
+  line-height: 1.5;
+  text-align: justify;
 }
