--- a/cripto-react/src/pages/SimulatorPage.module.css
+++ b/cripto-react/src/pages/SimulatorPage.module.css
@@ -33,7 +33,7 @@
 }
 
 .corTitulo {
-  color: #b120b1;
+  color: #8a3fa9;
 
 }
 
@@ -156,7 +156,7 @@
   font-size: 1.2em;
   font-weight: 600;
   margin-right: 66px;
-  color: #b120b1;
+  color: #903fb4;
   margin-bottom: 20px;
   text-align: center;
   text-transform: uppercase;
