--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -170,7 +170,7 @@ body {
 }
 
 .plataformaCursos .highlight {
-  color: #861888;
+  color: #8a3fa9;
   font-size: 56px;
 }
 
@@ -399,7 +399,7 @@ body {
 }
 
 .comunidadeRight .tituloCharme {
-  color: #861888;
+  color: #8a3fa9;
 }
 
 .comunidadeRight p {
