--- a/cripto-react/src/components/ProfileMenu.module.css
+++ b/cripto-react/src/components/ProfileMenu.module.css
@@ -22,7 +22,7 @@
 
 .profileContainer {
   backdrop-filter: blur(20px);
-  background: rgba(255, 255, 255, 0.196);
+  background: rgba(255, 255, 255, 0.658);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -80,7 +80,7 @@
 .btnEdit {
   display: inline-block;
   padding: 8px 18px;
-  background: linear-gradient(90deg, #3f025b, #b12092);
+  background: linear-gradient(135deg,  #732d91, #8e44ad);
   color: white;
   border-radius: 30px;
   text-decoration: none;
@@ -90,7 +90,7 @@
 }
 
 .btnEdit:hover {
-  background: linear-gradient(90deg, #b12092, #3f025b);
+  background: linear-gradient(135deg,  #732d91, #8e44ad);
   box-shadow: 0 6px 14px rgba(63, 2, 91, 0.6);
 }
 
