--- a/cripto-react/src/components/ProfileMenu.module.css
+++ b/cripto-react/src/components/ProfileMenu.module.css
@@ -21,14 +21,14 @@
 }
 
 .profileContainer {
-  backdrop-filter: blur(20px);
-  background: rgba(255, 255, 255, 0.658);
+  backdrop-filter: blur(100px);
+  background: rgba(255, 255, 255, 0.06);
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2.5rem 3rem;
   border-radius: 14px;
-  box-shadow: 0 8px 32px rgba(255, 251, 251, 0.267);
+  box-shadow: 0 8px 20px rgba(63, 2, 91, 0.25);
   text-align: center;
   width: 280px;
   position: absolute;
@@ -53,13 +53,13 @@
 .name {
   font-size: 1.6rem;
   margin: 0.3rem 0;
-  color: #3f025b;
+  color: #fff;
   font-weight: 700;
 }
 
 .bio {
   font-size: 1rem;
-  color: #555;
+  color: #868383;
   margin-top: 8px;
   margin-bottom: 1.5rem;
   line-height: 1.4;
@@ -72,7 +72,7 @@
 
 .levelTitle {
   font-size: 1.25rem;
-  color: #b12092;
+  color: #fff;
   margin-bottom: 12px;
   font-weight: 600;
 }
@@ -80,7 +80,7 @@
 .btnEdit {
   display: inline-block;
   padding: 8px 18px;
-  background: linear-gradient(135deg,  #732d91, #8e44ad);
+  background: linear-gradient(135deg, #732d91, #8e44ad);
   color: white;
   border-radius: 30px;
   text-decoration: none;
@@ -90,7 +90,7 @@
 }
 
 .btnEdit:hover {
-  background: linear-gradient(135deg,  #732d91, #8e44ad);
+  background: linear-gradient(135deg, #732d91, #8e44ad);
   box-shadow: 0 6px 14px rgba(63, 2, 91, 0.6);
 }
 
